--- a/.gitconfig
+++ b/.gitconfig
@@ -29,4 +29,5 @@
 [branch "master"]
 	remote = origin
 	merge = refs/heads/master
-
+[alias]
+    lg = log --graph --pretty=format:'%Cred%h%Creset %C(cyan)%an%Creset -%C(blue)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
