Adding gist plugin. Making tmux have colors by default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,3 +13,6 @@ bind l select-pane -R
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
+
+# color!
+set -g default-terminal "screen-256color"
