Changing windows-switch keys for tmux to include Ctrl

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,10 +6,10 @@ bind s split-window -v
 bind v split-window -h
 
 # use the vim motion keys to move between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
