Shorter escape-time in tmux. helps with vim mode switching

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,3 +16,7 @@ setw -g mode-keys vi
 
 # color!
 set -g default-terminal "screen-256color"
+
+# Faster escape sequences (default is 500ms).
+# This helps when exiting insert mode in Vim: http://superuser.com/a/252717/65504
+set -s escape-time 50
