--- a/.cabal/config
+++ b/.cabal/config
@@ -9,10 +9,10 @@
 
 
 remote-repo: hackage.haskell.org:http://hackage.haskell.org/packages/archive
-remote-repo-cache: /home/kholdstare/.cabal/packages
+remote-repo-cache: ~/.cabal/packages
 -- local-repo:
 -- logs-dir:
-world-file: /home/kholdstare/.cabal/world
+world-file: ~/.cabal/world
 -- verbose: 1
 -- compiler: ghc
 -- with-compiler:
@@ -53,7 +53,7 @@ documentation: True
 -- only-dependencies: False
 -- root-cmd:
 -- symlink-bindir:
-build-summary: /home/kholdstare/.cabal/logs/build.log
+build-summary: ~/.cabal/logs/build.log
 -- build-log:
 remote-build-reporting: anonymous
 -- one-shot: False
@@ -61,7 +61,7 @@ remote-build-reporting: anonymous
 -- password:
 
 install-dirs user
-  -- prefix: /home/kholdstare/.cabal
+  -- prefix: ~/.cabal
   -- bindir: $prefix/bin
   -- libdir: $prefix/lib
   -- libsubdir: $pkgid/$compiler
