--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,28 @@
+###########################
+# Some settings below taken from Chris Hunt's tmux.conf at
+# https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
+###########################
+
+###########################
+# Configuration
+###########################
+
 # Make prefix like screen
 set-option -g prefix C-a
+
+# use vim motion keys while in copy mode
+setw -g mode-keys vi
+
+# color!
+set -g default-terminal "screen-256color"
+
+# Faster escape sequences (default is 500ms).
+# This helps when exiting insert mode in Vim: http://superuser.com/a/252717/65504
+set -s escape-time 50
+
+###########################
+# Key Bindings
+###########################
 
 # use "v" and "s" to do vertical/horizontal splits, like vim
 bind s split-window -v
@@ -11,12 +34,45 @@ bind C-j select-pane -D
 bind C-k select-pane -U
 bind C-l select-pane -R
 
-# use vim motion keys while in copy mode
-setw -g mode-keys vi
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# color!
-set -g default-terminal "screen-256color"
+###########################
+# Status Bar
+###########################
 
-# Faster escape sequences (default is 500ms).
-# This helps when exiting insert mode in Vim: http://superuser.com/a/252717/65504
-set -s escape-time 50
+# enable UTF-8 support in status bar
+set -g status-utf8 on
+
+# set refresh interval for status bar
+set -g status-interval 30
+
+# center the status bar
+set -g status-justify left
+
+# show session, window, pane in left status bar
+set -g status-left-length 40
+set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
+
+# show hostname, date, time, and battery in right status bar
+set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
+ #[fg=red]#(battery discharging)#[default]#(battery charging)'
+
+###########################
+# Colors
+###########################
+
+# color status bar
+set -g status-bg colour235
+set -g status-fg white
+
+# highlight current window
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
+
+# set color of active pane
+set -g pane-border-fg colour235
+set -g pane-border-bg black
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
