--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,8 +56,8 @@ set -g status-left-length 40
 set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
- #[fg=red]#(battery discharging)#[default]#(battery charging)'
+set -g status-right-length 60
+set-option -g status-right '#15T #[fg=green]#H#[default] %m/%d/%y %I:%M'
 
 ###########################
 # Colors
