Adding mouse support and nicer colours for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,11 @@ set-option -g prefix C-a
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
 
+# mouse options
+setw -g mouse-resize-pane on
+setw -g mouse-select-pane on
+setw -g mouse-select-window on
+
 # color!
 set -g default-terminal "screen-256color"
 
@@ -63,10 +68,6 @@ set-option -g status-right '#15T #[fg=green]#H#[default] %m/%d/%y %I:%M'
 # Colors
 ###########################
 
-# color status bar
-set -g status-bg colour235
-set -g status-fg white
-
 # highlight current window
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg green
@@ -76,3 +77,19 @@ set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
+
+# Status bar colors
+# Adapted from Chris Forno:
+# https://github.com/jekor/dotfiles/blob/master/.tmux.conf
+set -g status-bg colour235
+set -g status-fg white
+setw -g window-status-format "#[fg=blue]#[bg=black] #I #[bg=green]#[fg=colour235] #W "
+setw -g window-status-current-format "#[bg=blue]#[fg=black] * #[fg=colour235]#[bg=brightgreen] #W "
+setw -g window-status-current-bg colour0
+setw -g window-status-current-fg colour11
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
+setw -g window-status-content-bg colour0
+setw -g window-status-content-fg colour11
