Simplifying color config, enabling mouse mode.
Can't get activity monitor to work.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,14 @@ set-option -g prefix C-a
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
 
+# alert when another shell is done running command
+set status on
+setw -g monitor-activity on
+set -g visual-activity off
+set -g visual-bell off
+
 # mouse options
+setw -g mode-mouse on
 setw -g mouse-resize-pane on
 setw -g mouse-select-pane on
 setw -g mouse-select-window on
@@ -58,7 +65,7 @@ set -g status-justify left
 
 # show session, window, pane in left status bar
 set -g status-left-length 40
-set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
+set -g status-left '#[fg=green]#S#[fg=colour27] #I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
 set -g status-right-length 60
@@ -67,10 +74,6 @@ set-option -g status-right '#15T #[fg=green]#H#[default] %m/%d/%y %I:%M'
 ###########################
 # Colors
 ###########################
-
-# highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
 
 # set color of active pane
 set -g pane-border-fg colour235
@@ -83,13 +86,6 @@ set -g pane-active-border-bg black
 # https://github.com/jekor/dotfiles/blob/master/.tmux.conf
 set -g status-bg colour235
 set -g status-fg white
-setw -g window-status-format "#[fg=blue]#[bg=black] #I #[bg=green]#[fg=colour235] #W "
-setw -g window-status-current-format "#[bg=blue]#[fg=black] * #[fg=colour235]#[bg=brightgreen] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
+setw -g window-status-format "#[bg=colour27]#[fg=black] #I #[fg=colour47]#[bg=colour235] #W "
+setw -g window-status-current-format "#[bg=colour27]#[fg=black] * #[fg=colour235]#[bg=colour47] #W "
 setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
-setw -g window-status-content-bg colour0
-setw -g window-status-content-fg colour11
