Adding "send-prefix" configuration for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,9 @@
 ###########################
 
 # Make prefix like screen
+unbind C-b
 set-option -g prefix C-a
+bind a send-prefix
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
