--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,8 @@ setw -g mode-keys vi
 
 # alert when another shell is done running command
 set status on
-setw -g monitor-activity on
+setw -g monitor-activity off
+setw -g monitor-content "$ "
 set -g visual-activity off
 set -g visual-bell off
 
@@ -60,7 +61,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set -g status-utf8 on
 
 # set refresh interval for status bar
-set -g status-interval 30
+set -g status-interval 2
 
 # center the status bar
 set -g status-justify left
