Changing tmux prefix-send to be C-a C-a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@
 # Make prefix like screen
 unbind C-b
 set-option -g prefix C-a
-bind a send-prefix
+bind C-a send-prefix
 
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
