--- a/.gitconfig
+++ b/.gitconfig
@@ -1,26 +1,33 @@
+# ========
+# Colors
 [color]
-  branch = auto
-  diff = auto
-  status = auto
+    branch = auto
+    diff = auto
+    status = auto
 
 [color "branch"]
-  current = yellow reverse
-  local = yellow
-  remote = green
+    current = yellow reverse
+    local = yellow
+    remote = green
 
 [color "diff"]
-  meta = yellow bold
-  frag = magenta bold
-  old = red bold
-  new = green bold
+    meta = yellow bold
+    frag = magenta bold
+    old = red bold
+    new = green bold
 
 [color "status"]
-  added = yellow
-  changed = green
-  untracked = cyan
+    added = yellow
+    changed = green
+    untracked = cyan
+
+# ========
+# Use info
 [user]
-	name = Alexander Kondratskiy
-	email = kholdstare0.0@gmail.com
+    name = Alexander Kondratskiy
+    email = kholdstare0.0@gmail.com
+[github]
+    user = KholdStare
 
 # ========
 # suggested settings by qt project from http://qt-project.org/wiki/Setting-up-Gerrit
@@ -34,21 +41,22 @@
     stat = true
 [core]
     pager = "less -FRSX"
-# ========
 
-[github]
-	user = KholdStare
-[init]
-	templatedir = ~/.git_template
-[branch "master"]
-	remote = origin
-	merge = refs/heads/master
+# ========
+# Handy aliases
 [alias]
     lg = log --graph --pretty=format:'%Cred%h%Creset %C(cyan)%an%Creset -%C(blue)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
-# some alises described in http://blog.apiaxle.com/post/handy-git-tips-to-stop-you-getting-fired/
-	snapshot = !git stash save "snapshot: $(date)" && git stash apply "stash@{0}"
-	assume   = update-index --assume-unchanged
-	unassume = update-index --no-assume-unchanged
-	assumed  = "!git ls-files -v | grep ^h | cut -c 3-"
+# some aliases described in http://blog.apiaxle.com/post/handy-git-tips-to-stop-you-getting-fired/
+    snapshot = !git stash save "snapshot: $(date)" && git stash apply "stash@{0}"
+    assume   = update-index --assume-unchanged
+    unassume = update-index --no-assume-unchanged
+    assumed  = "!git ls-files -v | grep ^h | cut -c 3-"
+
+# ========
+[init]
+    templatedir = ~/.git_template
+[branch "master"]
+    remote = origin
+    merge = refs/heads/master
 [diff]
-	algorithm = patience
+    algorithm = patience
