Set status with -g (tmux 1.9 complains)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,7 @@ bind C-a send-prefix
 setw -g mode-keys vi
 
 # alert when another shell is done running command
-set status on
+set -g status on
 setw -g monitor-activity off
 setw -g monitor-content "$ "
 set -g visual-activity off
