Moving to tmux 1.9. Preserving behaviour with some key bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,9 +39,14 @@ set -s escape-time 50
 # Key Bindings
 ###########################
 
+# Keep current terminal path for existing bindings
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 # use "v" and "s" to do vertical/horizontal splits, like vim
-bind s split-window -v
-bind v split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 
 # use the vim motion keys to move between panes
 bind C-h select-pane -L
