Modify .tmux.conf for tmux 2.1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,15 +18,11 @@ setw -g mode-keys vi
 # alert when another shell is done running command
 set -g status on
 setw -g monitor-activity off
-setw -g monitor-content "$ "
 set -g visual-activity off
 set -g visual-bell off
 
 # mouse options
-setw -g mode-mouse on
-setw -g mouse-resize-pane on
-setw -g mouse-select-pane on
-setw -g mouse-select-window on
+setw -g mouse on
 
 # color!
 set -g default-terminal "screen-256color"
