[BASH][TMUX] minor updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,9 @@ setw -g mouse on
 # color!
 set -g default-terminal "screen-256color"
 
+# start bash
+set -g default-command "/bin/bash"
+
 # Faster escape sequences (default is 500ms).
 # This helps when exiting insert mode in Vim: http://superuser.com/a/252717/65504
 set -s escape-time 50
@@ -59,7 +62,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 ###########################
 
 # enable UTF-8 support in status bar
-set -g status-utf8 on
+# set -g status-utf8 on
 
 # set refresh interval for status bar
 set -g status-interval 2
